--- a/miniprogram/pages/publish/publish.wxss
+++ b/miniprogram/pages/publish/publish.wxss
@@ -5,41 +5,33 @@
   width: 100%;
   height: 100%;
   position: relative;
+  align-items: center;
 }
 /* 全部功能 */
 #container-fun{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-}
-
-/* 一行功能 */
-.container-fun-row{ 
-  width: 100%;
-  height: 80px;
+  width: 95%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  padding: 5px;
+  flex-wrap: wrap;
 }
 /* 单个功能方块 */
 .container-fun-single{
-  padding: 5px;
-  flex: 1;
-  height: 100%;
+  width: 20%;
+  height: 150rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .image-fun{
-  flex: 1;
-  width: 90%;
+  height: 80%;
+  width: 80%;
+  padding: 10%;
+  border-radius: 30rpx;
 
 }
 .text-fun{
-  font-size: 15px;
+  font-size: 25rpx;
+
 }
 
 /* 频道菜单容器 */
