--- a/miniprogram/pages/index/contentRecordTemplate.wxss
+++ b/miniprogram/pages/index/contentRecordTemplate.wxss
@@ -189,3 +189,9 @@ white-space: nowrap;
   font-size: 15px;
   padding-left: 5px;
 }
+.button-share{
+  background-color: #fff;
+}
+.button-share::after{
+  border: none !important;
+}
