--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,5 +1,5 @@
 /**app.wxss**/
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,11 +7,11 @@
  height: 100%;
   width: 100%;
   background-color: #F2F2F2;
-} 
+}  */
 
-page{
+/* page{
   height: 100%;
-}
+} */
 
 .hide{
   display: none;
