--- a/miniprogram/pages/contentDetail/contentDetail.wxml
+++ b/miniprogram/pages/contentDetail/contentDetail.wxml
@@ -44,40 +44,59 @@
     </view>
   </view>
 
-    <view class='container-tool'>
-      <view class='container-tool-single'>
-          <image class='image-tool' src='../../images/home.png' bindtap='tapHome'></image>
-          <text class='text-tool'>首页</text>
-      </view>
-            <button class='container-tool-single button-share'   open-type='share' >
-          <image class='image-tool' src='../../images/share.png'></image>
-          <text class='text-tool text-share'>分享</text>
-      </button>
-      <view class='container-tool-single' bindtap='tapComment'>
-          <image class='image-tool' src='../../images/comment.png'></image>
-          <text class='text-tool'>评论</text>
-      </view>
-      <view class='container-tool-single' bindtap='tapAgree'>
-          <image class='image-tool' src='../../images/zan.png'></image>
-          <text class='text-tool'>{{content.agree_num}}</text>
-      </view>
-      <view class='container-tool-single container-tool-concat' bindtap='tapConcat'>
-         联系Ta
-      </view>
-
+  <view class='container-tool'>
+    <view class='container-tool-single'>
+      <image class='image-tool' src='../../images/home.png' bindtap='tapHome'></image>
+      <text class='text-tool'>首页</text>
+    </view>
+    <button class='container-tool-single button-share' open-type='share'>
+      <image class='image-tool' src='../../images/share.png'></image>
+      <text class='text-tool text-share'>分享</text>
+    </button>
+    <view class='container-tool-single' bindtap='tapComment'>
+      <image class='image-tool' src='../../images/comment.png'></image>
+      <text class='text-tool'>评论</text>
+    </view>
+    <view class='container-tool-single' bindtap='tapAgree'>
+      <image class='image-tool' src='../../images/zan.png'></image>
+      <text class='text-tool'>{{content.agree_num}}</text>
+    </view>
+    <view class='container-tool-single container-tool-concat' bindtap='tapConcat'>
+      联系Ta
     </view>
 
-    <!-- 遮罩层 -->
+  </view>
 
-    <view class='container-cover'>
+  <!-- 遮罩层 -->
 
+  <view class='container-cover {{classCover}}'>
+
+  </view>
+
+  <view class='container-report {{classReport}}'>
+  
+    <view class='container-report-label'>
+      <text class='text-report'> 举报</text>
+      <icon class='icon-report-cancel'  color='black' type='cancel'></icon>
+    </view>
+    <textarea name='{{report}}' bindinput='inputReport' class='textarea-report' focus cursor-spacing="260rpx" placeholder='这里输入举报的原因'>
+
+    </textarea>
+    <view class='container-report-button'>
+      <button class='button-report-1'>举报</button>
     </view>
 
-    <view class='container-report'>
+  </view>
 
+  <form class='container-comment {{classComment}}' bindsubmit='submitComment'>
+<view class='container-comment-label'>
+      <text class='text-comment'> 评论</text>
+      <icon class='icon-comment-cancel'  color='black' type='cancel'></icon>
     </view>
 
-    <view class='container-comment'>
-      
-    </view>
+     <textarea name='comment' class='textarea-comment' focus cursor-spacing="260rpx" placeholder='{{commentPlaceHolder}}'>
+
+    </textarea>
+    <button class='button-comment' form-type='submit'>评论</button>
+  </form>
 </view>
