添加delete 云函数 删除在管理端删除符合条件的记录，完善我的 tab ；增加评论管理，内容管理，调整 点赞，评论等操作

--- a/miniprogram/pages/contentDetail/contentDetail.wxml
+++ b/miniprogram/pages/contentDetail/contentDetail.wxml
@@ -104,7 +104,7 @@
       <icon class='icon-comment-cancel'  color='black' bindtap='tapCommentCancel' type='cancel'></icon>
     </view>
 
-     <textarea name='comment' class='textarea-comment' focus cursor-spacing="260rpx" placeholder='{{commentPlaceHolder}}'>
+     <textarea name='comment' class='textarea-comment' focus='{{focusWriteComment}}' cursor-spacing="260rpx" placeholder='{{commentPlaceHolder}}'>
 
     </textarea>
     <button class='button-comment' form-type='submit'>评论</button>
