--- a/miniprogram/pages/contentDetail/contentDetail.wxss
+++ b/miniprogram/pages/contentDetail/contentDetail.wxss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   background-color: gainsboro;
+  width: 100%;
+  min-height: 100%;
 }
 
 .container-fun {
@@ -10,7 +12,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 50rpx;
   position: relative;
   padding-left: 10rpx;
   background-color: white;
@@ -228,7 +229,7 @@
   top: 0rpx;
 }
 .container-comment-write{
-  position: absolute;
+  position: fixed;
   bottom: 0rpx;
   background-color: whitesmoke;
   width: 100%;
