--- a/miniprogram/pages/my/my.wxss
+++ b/miniprogram/pages/my/my.wxss
@@ -12,7 +12,7 @@ position: relative;
 .container-user{
   width: 100%;
   height: 300rpx;
-  background-color: goldenrod;
+  background-color: rgba(11, 108, 199, 0.925);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,8 +25,11 @@ position: relative;
   align-items: center;
 }
 .image-user{
-  width: 100rpx;
-  height: 100rpx;
+  width: 150rpx;
+  height: 150rpx;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  border-radius: 75rpx;
 }
 .text-user-name{
   color: white;
