--- a/miniprogram/pages/publish/publish.wxss
+++ b/miniprogram/pages/publish/publish.wxss
@@ -1,4 +1,7 @@
-/* miniprogram/pages/publish/publish.wxss */
+page{
+  width: 100%;
+  height: 100%;
+}
 #container{
   display: flex;
   flex-direction: column;
@@ -39,14 +42,13 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
   display: flex;
   flex-direction: column;
+
 }
 
 /* 频道菜单 */
 .container-channels{
-  opacity: 0.5;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -55,11 +57,12 @@
   padding: 5px;
   background-color: white;
   z-index: 99;
+  position: absolute;
+  bottom: 0rpx;
 }
 /* 遮罩层 */
 .shade{
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.479);
   flex:1;
   width: 100%;
   z-index: 90;
