--- a/miniprogram/pages/template/contentRecord/contentRecordTemplate.wxml
+++ b/miniprogram/pages/template/contentRecord/contentRecordTemplate.wxml
@@ -1,5 +1,5 @@
 <template name='recordTemplate' data="{{record,index,manager}}">
- 
+
   <view class='container-content'>
     <!-- 头像部分 -->
     <view class='container-content-person'>
@@ -25,11 +25,11 @@
         <image class='image-content' src='{{record.images[0]}}' data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[0]}}'></image>
       </view>
       <view class='container-image-single' wx:if='{{record.images.length > 1 }}'>
-        <image class='image-content' src='{{record.images[1]}}'  data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[1]}}'></image>
+        <image class='image-content' src='{{record.images[1]}}' data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[1]}}'></image>
       </view>
       <view class='container-image-single container-image-more'>
-        <image class='image-content' src='{{record.images[2]}}' wx:if='{{record.images.length > 2 }}'  data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[2]}}'></image>
-        <view class='container-more ' wx:if='{{record.images.length >3}}'  data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[2]}}'>
+        <image class='image-content' src='{{record.images[2]}}' wx:if='{{record.images.length > 2 }}' data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[2]}}'></image>
+        <view class='container-more ' wx:if='{{record.images.length >3}}' data-images='{{record.images}}' bindtap='tapImage' data-url='{{record.images[2]}}'>
           <text class='text-image-more-number'>+ {{record.images.length -3}}</text>
         </view>
       </view>
@@ -51,18 +51,21 @@
         <image class='image-tool' src='../../images/comment.png'></image>
         <text class='text-tool'>{{record.comment_num}}</text>
       </view>
-      <view class='container-tool-single' bindtap='tapZan' data-record='{{record}}'    data-index='{{index}}'>
-        <image class='image-tool' src='../../images/zan.png'></image>
+      <view class='container-tool-single' bindtap='tapZan' data-record='{{record}}' data-index='{{index}}'>
+
+        <image wx:if='{{record.agree}}' class='image-tool' src='../../images/zan_ed.png'></image>
+        <image wx:else class='image-tool' src='../../images/zan.png'></image>
+
         <text class='text-tool'>{{record.agree_num}}</text>
       </view>
       <!-- <view class='container-tool-single' bindtap='tapContentShare' data-record='{{record}}'> -->
       <button class='button-share container-tool-single' open-type='share' data-content='{{record}}'>
         <image class='image-tool' src='../../images/share.png'></image>
         <text class='text-tool'>分享</text>
-        </button>
+      </button>
       <!-- </view> -->
     </view>
 
-<text  wx:if='{{manager}}' class='text-person-contact' bindtap='tapDelContent' data-record='{{record}}' data-index='{{index}}'>删除</text>
+    <text wx:if='{{manager}}' class='text-person-contact' bindtap='tapDelContent' data-record='{{record}}' data-index='{{index}}'>删除</text>
   </view>
 </template>
