--- a/miniprogram/pages/index/contentType.wxml
+++ b/miniprogram/pages/index/contentType.wxml
@@ -1,22 +1,22 @@
 <view class='container-type class-background-white'>
 
-  <view class='box-type' data-type='create_date' bindtap='bindTypeTap' >
-    <text class='text-type {{contenTypeNewestPublish}}'>最新发布</text>
+  <view class='box-type' data-type='create_date' bindtap='bindTypeTap'  data-index='0'>
+    <text class="text-type {{selectTypeIndex ==0 ?'selected-text' : ''}}">最新发布</text>
+  </view>
+
+ 
+  <view class='box-type' data-type='view_num' bindtap='bindTypeTap' data-index='1'>
+    <text class="text-type {{selectTypeIndex ==1 ?'selected-text' : ''}}">最多浏览</text>
   </view>
 
 
-  <view class='box-type' data-type='view_num' bindtap='bindTypeTap'>
-    <text class='text-type {{contentTypeNewestReply}}'>最多浏览</text>
+  <view class='box-type' data-type='agree_num' bindtap='bindTypeTap' data-index='2'>
+    <text class="text-type {{selectTypeIndex ==2 ?'selected-text' : ''}}">最多点赞</text>
   </view>
 
 
-  <view class='box-type' data-type='agree_num' bindtap='bindTypeTap'>
-    <text class='text-type {{contentTypeMostZan}}'>最多点赞</text>
-  </view>
-
-
-  <view class='box-type' data-type='share_num' bindtap='bindTypeTap'>
-    <text class='text-type {{contentTypeMostShare}}'>最多分享</text>
+  <view class='box-type' data-type='share_num' bindtap='bindTypeTap' data-index='3'>
+    <text class="text-type {{selectTypeIndex ==3 ?'selected-text' : ''}}">最多分享</text>
   </view>
 
 </view>
