--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -74,9 +74,9 @@
     <!-- 线条 -->
     <view id='interval-line' wx:if='{{funList.length > 0 }}'></view>
     <!-- 计数 -->
-    <view id='container-num' class='class-background-white'>
+    <!-- <view id='container-num' class='class-background-white'>
       <text id='text-num'>浏览：{{browseNum}}  发布：{{publishNum}}  分享：{{shareNum}}</text>
-    </view>
+    </view> -->
 
     <!-- 内容类型 -->
     <view class='container-type-include'>
